--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -20,6 +20,7 @@ jobs:
   update-docs:
     runs-on: ubuntu-latest
     steps:
+      # Setup
       - name: checkout tauri
         uses: actions/checkout@v2
         with:
@@ -29,10 +30,17 @@ jobs:
         with:
           repository: tauri-apps/tauri-docs
           path: tauri-docs
+      - name: checkout tauri-search-bot
+        uses: actions/checkout@v2
+        with:
+          repository: tauri-apps/tauri-search-bot
+          path: tauri-search-bot
       - name: install webkit2gtk
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
+
+      # Rust
       - name: generate rust docs
         working-directory: ./tauri/core/tauri
         run: cargo doc --no-deps
@@ -44,6 +52,8 @@ jobs:
           sidebarPath: ./tauri-docs/sidebars/rustdoc.json
           linksRoot: ""
           cratesToProcess: "tauri"
+
+      # TypeScript
       - name: run typedocusaurus
         uses: tauri-apps/typedocusaurus@v1
         with:
@@ -54,9 +64,8 @@ jobs:
       - name: copy docs
         working-directory: ./tauri
         run: mv docs/sidebar.json ../tauri-docs/sidebars/core.json && cp -r docs ../tauri-docs/docs/en
-      - name: set docs version
-        working-directory: ./tauri-docs
-        run: echo ${{ github.event.release.tag_name }} > version.txt
+
+      # Indexing
       - name: meilisearch indexation
         uses: tauri-apps/docusaurus-meilisearch-indexer@v1
         with:
@@ -65,6 +74,42 @@ jobs:
           - host: https://search.tauri.studio
           - apiKey: ${{ secrets.MEILISEARCH_APIKEY }}
           - docs: "Getting started,Usage,API"
+
+      # Applying Version
+      - name: set docs' Tauri version
+        working-directory: ./tauri-docs
+        run: echo ${{ github.event.release.tag_name }} > version.txt
+      - name: set bot's Tauri version
+        working-directory: ./tauri-search-bot
+        uses: iamsauravsharma/create-dotenv@v1.1.0
+        env:
+          ENV_KEY_DISCORD_BOT_SECRET: ${{secrets.DISCORD_BOT_SECRET}}
+          ENV_KEY_PREFIX: !
+          ENV_KEY_SITE: tauri.studio
+          ENV_KEY_ICON: https://i.imgur.com/UzDERvw.png
+          ENV_KEY_LIMIT: 5
+          ENV_KEY_SEARCH_INDEX: ${{ github.event.release.tag_name }}
+          ENV_KEY_MEILISEARCH_PUBLIC_KEY: ea0105f56bb5a2111ed28c7a0c637fc0bed07273f571dc7cb1f73900e44f8e7f
+
+      # Bot Deployment
+      - name: scp bot
+        working-directory: ./tauri-search-bot
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.DISCORD_BOT_HOST }}
+          username: ${{ secrets.DISCORD_BOT_SSH_USER }}
+          key: ${{ secrets.DISCORD_BOT_SSH_KEY }}
+          source: "."
+          target: "~"
+      - name: restart the bot
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DISCORD_BOT_HOST }}
+          username: ${{ secrets.DISCORD_BOT_SSH_USER }}
+          key: ${{ secrets.DISCORD_BOT_SSH_KEY }}
+          script: cd ~/tauri-search-bot && yarn && forever stopall && forever start ./src/index.js
+
+      # tauri-docs PR
       - name: git config
         run: |
           git config --global user.name "${{ github.event.inputs.gitName }}"
