--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -85,7 +85,7 @@ jobs:
         uses: iamsauravsharma/create-dotenv@v1.1.0
         env:
           ENV_KEY_DISCORD_BOT_SECRET: ${{ secrets.DISCORD_BOT_SECRET }}
-          ENV_KEY_PREFIX: !
+          ENV_KEY_PREFIX: "!"
           ENV_KEY_SITE: tauri.studio
           ENV_KEY_ICON: https://i.imgur.com/UzDERvw.png
           ENV_KEY_LIMIT: 5
