--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -96,13 +96,12 @@ jobs:
 
       # Bot Deployment
       - name: scp bot
-        working-directory: ./tauri-search-bot
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.DISCORD_BOT_HOST }}
           username: ${{ secrets.DISCORD_BOT_SSH_USER }}
           key: ${{ secrets.DISCORD_BOT_SSH_KEY }}
-          source: "."
+          source: "./tauri-search-bot"
           target: "~/tauri-search-bot"
       - name: restart the bot
         uses: appleboy/ssh-action@master
