fix: Running on core-docs-sidebar branch for tauri-docs

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           repository: tauri-apps/tauri-docs
           path: tauri-docs
+          ref: feat/core-docs-sidebar
       - name: checkout tauri-search-bot
         uses: actions/checkout@v2
         with:
