--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -15,6 +15,9 @@ on:
         description: "git email for PR"
         required: false
         default: "tauri-bot@tauri.studio"
+      version:
+        description: "Tauri version"
+        required: true
 
 jobs:
   update-docs:
@@ -63,7 +66,7 @@ jobs:
         with:
           originPath: ./tauri/tooling/api/
           sidebarFile: "${{ github.workspace }}/tauri-docs/sidebars/typedoc.json"
-          targetPath: ./tauri-docs/en/api/js/
+          targetPath: ./tauri-docs/en/api/js
           docusaurusPath: ./tauri-docs/
 
       # Moving docs for Indexation
@@ -75,7 +78,7 @@ jobs:
       - name: meilisearch indexation
         uses: tauri-apps/docusaurus-meilisearch-indexer@v1
         with:
-          version: ${{ github.event.release.tag_name }}
+          version: ${{ github.event.inputs.version || github.event.release.tag_name }}
           docusaurusPath: "${{ github.workspace }}/tauri-docs"
           host: https://search.tauri.studio
           apiKey: ${{ secrets.MEILISEARCH_APIKEY }}
@@ -84,7 +87,7 @@ jobs:
       # Applying Version
       - name: set docs' Tauri version
         working-directory: ./tauri-docs
-        run: echo ${{ github.event.release.tag_name }} > version.txt
+        run: echo ${{ github.event.inputs.version || github.event.release.tag_name }} > version.txt
       - name: set bot's Tauri version
         uses: iamsauravsharma/create-dotenv@v1.1.0
         env:
@@ -92,8 +95,8 @@ jobs:
           ENV_KEY_PREFIX: "!"
           ENV_KEY_SITE: tauri.studio
           ENV_KEY_ICON: https://i.imgur.com/UzDERvw.png
-          ENV_KEY_LIMIT: 5
-          ENV_KEY_SEARCH_INDEX: ${{ github.event.release.tag_name }}
+          ENV_KEY_LIMIT: 8
+          ENV_KEY_SEARCH_INDEX: ${{ github.event.inputs.version || github.event.release.tag_name }}
           ENV_KEY_MEILISEARCH_PUBLIC_KEY: ea0105f56bb5a2111ed28c7a0c637fc0bed07273f571dc7cb1f73900e44f8e7f
       - name: move bot's dotenv
         run: mv .env ./tauri-search-bot
