--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -5,6 +5,8 @@
 name: update-docs
 
 on:
+  release:
+    types: [published]
   workflow_dispatch:
     inputs:
       gitName:
@@ -44,45 +46,45 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
 
-      # # Rust
-      # - name: generate rust docs
-      #   working-directory: ./tauri/core/tauri
-      #   run: cargo doc --no-deps
-      # - name: run rustdocusaurus
-      #   uses: tauri-apps/rustdocusaurus/github-action@v1
-      #   with:
-      #     originPath: ./tauri/target/doc/
-      #     targetPath: ./tauri-docs/docs/en/api/rust/
-      #     sidebarPath: "${{ github.workspace }}/tauri-docs/sidebars/rustdoc.json"
-      #     linksRoot: ""
-      #     cratesToProcess: "tauri"
+      # Rust
+      - name: generate rust docs
+        working-directory: ./tauri/core/tauri
+        run: cargo doc --no-deps
+      - name: run rustdocusaurus
+        uses: tauri-apps/rustdocusaurus/github-action@v1
+        with:
+          originPath: ./tauri/target/doc/
+          targetPath: ./tauri-docs/docs/en/api/rust/
+          sidebarPath: "${{ github.workspace }}/tauri-docs/sidebars/rustdoc.json"
+          linksRoot: ""
+          cratesToProcess: "tauri"
 
-      # # TypeScript
-      # - name: install API deps
-      #   working-directory: ./tauri/tooling/api
-      #   run: yarn && yarn add typescript@4.2
-      # - name: run typedocusaurus
-      #   uses: tauri-apps/typedocusaurus@v1
-      #   with:
-      #     originPath: ./tauri/tooling/api/
-      #     sidebarFile: "${{ github.workspace }}/tauri-docs/sidebars/typedoc.json"
-      #     targetPath: ./tauri-docs/en/api/js
-      #     docusaurusPath: ./tauri-docs/
+      # TypeScript
+      - name: install API deps
+        working-directory: ./tauri/tooling/api
+        run: yarn && yarn add typescript@4.2
+      - name: run typedocusaurus
+        uses: tauri-apps/typedocusaurus@v1
+        with:
+          originPath: ./tauri/tooling/api/
+          sidebarFile: "${{ github.workspace }}/tauri-docs/sidebars/typedoc.json"
+          targetPath: ./tauri-docs/en/api/js
+          docusaurusPath: ./tauri-docs/
 
-      # # Moving docs for Indexation
-      # - name: copy docs
-      #   working-directory: ./tauri
-      #   run: mv docs/sidebar.json ${{ github.workspace }}/tauri-docs/sidebars/core.json && cp -r docs/* ${{ github.workspace }}/tauri-docs/docs/en
+      # Moving docs for Indexation
+      - name: copy docs
+        working-directory: ./tauri
+        run: mv docs/sidebar.json ${{ github.workspace }}/tauri-docs/sidebars/core.json && cp -r docs/* ${{ github.workspace }}/tauri-docs/docs/en
 
-      # # Indexing
-      # - name: meilisearch indexation
-      #   uses: tauri-apps/docusaurus-meilisearch-indexer@v1
-      #   with:
-      #     version: ${{ github.event.inputs.version || github.event.release.tag_name }}
-      #     docusaurusPath: "${{ github.workspace }}/tauri-docs"
-      #     host: https://search.tauri.studio
-      #     apiKey: ${{ secrets.MEILISEARCH_APIKEY }}
-      #     docs: "Getting started,Usage,API"
+      # Indexing
+      - name: meilisearch indexation
+        uses: tauri-apps/docusaurus-meilisearch-indexer@v1
+        with:
+          version: ${{ github.event.inputs.version || github.event.release.tag_name }}
+          docusaurusPath: "${{ github.workspace }}/tauri-docs"
+          host: https://search.tauri.studio
+          apiKey: ${{ secrets.MEILISEARCH_APIKEY }}
+          docs: "Getting started,Usage,API"
 
       # Applying Version
       - name: set docs' Tauri version
@@ -119,19 +121,19 @@ jobs:
           key: ${{ secrets.DISCORD_BOT_SSH_KEY }}
           script: cd ~/tauri-search-bot/github/workspace/tauri-search-bot && yarn && forever stopall && forever start ./src/index.js
 
-      # # tauri-docs PR
-      # - name: git config
-      #   run: |
-      #     git config --global user.name "${{ github.event.inputs.gitName }}"
-      #     git config --global user.email "${{ github.event.inputs.gitEmail }}"
-      # - name: create pull request for updated docs
-      #   uses: tauri-apps/create-pull-request@v3.4.1
-      #   with:
-      #     token: ${{ secrets.TAURI_BOT_PAT }}
-      #     commit-message: "chore(docs): Update Rust & TS docs"
-      #     branch: docs/release
-      #     path: tauri-docs
-      #     title: Update Docs
-      #     labels: "new release"
-      #     body: |
-      #       These are the updated docs from the most recent release.
+      # tauri-docs PR
+      - name: git config
+        run: |
+          git config --global user.name "${{ github.event.inputs.gitName }}"
+          git config --global user.email "${{ github.event.inputs.gitEmail }}"
+      - name: create pull request for updated docs
+        uses: tauri-apps/create-pull-request@v3.4.1
+        with:
+          token: ${{ secrets.TAURI_BOT_PAT }}
+          commit-message: "chore(docs): Update Rust & TS docs"
+          branch: docs/release
+          path: tauri-docs
+          title: Update Docs
+          labels: "new release"
+          body: |
+            These are the updated docs from the most recent release.
