--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -86,6 +86,9 @@ raw-window-handle = { version="0.3.3", optional = true }
 # Updater
 minisign-verify = { version = "0.1", optional = true }
 
+[target."cfg(target_os = \"linux\")".dependencies]
+glib = "0.10"
+
 [build-dependencies]
 cfg_aliases = "0.1.1"
 
