--- a/examples/sidecar/package.json
+++ b/examples/sidecar/package.json
@@ -12,6 +12,7 @@
     "package": "pkg package.json --output src-tauri/binaries/app && node scripts/move-binary.js"
   },
   "devDependencies": {
+    "execa": "5.1.1",
     "pkg": "5.2.1"
   }
 }
