--- a/tooling/webdriver/Cargo.toml
+++ b/tooling/webdriver/Cargo.toml
@@ -20,5 +20,7 @@ futures = "0.3"
 pico-args = "0.4"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
+signal-hook = "0.3"
+signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
 tokio = { version = "1", features = [ "macros" ] } # other required features enabled by hyper
 which = "4"
