--- a/.changes/config.json
+++ b/.changes/config.json
@@ -290,6 +290,10 @@
     "create-tauri-app": {
       "path": "./tooling/create-tauri-app",
       "manager": "javascript"
+    },
+    "tauri-driver": {
+      "path": "./tooling/webdriver",
+      "manager": "rust"
     }
   }
 }
