--- a/.changes/config.json
+++ b/.changes/config.json
@@ -293,7 +293,8 @@
     },
     "tauri-driver": {
       "path": "./tooling/webdriver",
-      "manager": "rust"
+      "manager": "rust",
+      "postversion": "node ../../.scripts/sync-prerelease.js ${ pkg.pkg } ${ release.type }"
     }
   }
 }
