--- a/tooling/webdriver/Cargo.toml
+++ b/tooling/webdriver/Cargo.toml
@@ -2,15 +2,15 @@ workspace = { }
 
 [package]
 name = "tauri-driver"
-version = "0.0.0"
-authors = ["Tauri Programme within The Commons Conservancy"]
-categories = ["gui", "web-programming"]
+version = "0.1.0"
+authors = [ "Tauri Programme within The Commons Conservancy" ]
+categories = [ "gui", "web-programming" ]
 license = "Apache-2.0 OR MIT"
 homepage = "https://tauri.studio"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Webdriver server for Tauri applications"
 readme = "README.md"
-exclude = [".license_template", "/target"]
+exclude = [ ".license_template", "/target" ]
 edition = "2018"
 
 [dependencies]
@@ -22,5 +22,5 @@ serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 signal-hook = "0.3"
 signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
-tokio = { version = "1", features = [ "macros" ] } # other required features enabled by hyper
+tokio = { version = "1", features = [ "macros" ] }
 which = "4"
