--- a/tooling/api/package.json
+++ b/tooling/api/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.1.0",
     "eslint-plugin-security": "1.4.0",
+    "fs-extra": "10.0.0",
     "lockfile-lint": "4.6.2",
     "prettier": "2.3.1",
     "regenerator-runtime": "0.13.7",
