--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           originPath: ./tauri/tooling/api/
           sidebarFile: "${{ github.workspace }}/tauri-docs/sidebars/typedoc.json"
-          targetPath: ${{ github.workspace }}/tauri-docs/en/api/js
+          targetPath: ${{ github.workspace }}/tauri-docs/docs/en/api/js
           docusaurusPath: ./tauri-docs/
 
       # Moving docs for Indexation
@@ -76,11 +76,6 @@ jobs:
         working-directory: ./tauri
         run: mv docs/sidebar.json ${{ github.workspace }}/tauri-docs/sidebars/core.json && cp -r docs/* ${{ github.workspace }}/tauri-docs/docs/en
 
-      - name: Start SSH session
-        uses: luchihoratiu/debug-via-ssh@main
-        with:
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-          SSH_PASS: ${{ secrets.UPDATE_DOCS_SSH_PASS }}
       # Indexing
       - name: meilisearch indexation
         uses: tauri-apps/docusaurus-meilisearch-indexer@v1
