Don't run the update-docs workflow for unimportant changes
- Added ignored (!) paths that we don't want the update-docs workflow to even start and instead it entirely.
- Probably might be other folders or files that could be ignored to skip the update-docs workflow (I don't know what they might be however)

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -7,6 +7,11 @@ name: update-docs
 on:
   release:
     types: [published]
+    paths:
+      - '!README.md'
+      - '!LICENSE'
+      - '!.gitignore'
+
   workflow_dispatch:
     inputs:
       gitName:
