--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -21,3 +21,4 @@ tauri-utils = { version = "1.0.0-beta.1", path = "../tauri-utils", features = [ 
 thiserror = "1"
 walkdir = "2"
 zstd = "0.9"
+kuchiki = "0.8"
