--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -69,6 +69,9 @@ rfd = "0.4"
 raw-window-handle = { version = "0.3.3", optional = true }
 minisign-verify = { version = "0.1", optional = true }
 
+[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
+gtk = { version = "0.9", features = [ "v3_16" ] }
+
 [build-dependencies]
 cfg_aliases = "0.1.1"
 
