--- a/core/tauri-runtime/Cargo.toml
+++ b/core/tauri-runtime/Cargo.toml
@@ -31,6 +31,9 @@ uuid = { version = "0.8.2", features = [ "v4" ] }
 [target."cfg(windows)".dependencies]
 winapi = "0.3"
 
+[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
+gtk = { version = "0.9", features = [ "v3_16" ] }
+
 [features]
 menu = [ ]
 system-tray = [ ]
