--- a/tooling/bundler/Cargo.toml
+++ b/tooling/bundler/Cargo.toml
@@ -48,6 +48,7 @@ bitness = "0.4"
 winreg = "0.9"
 sha2 = "0.9"
 hex = "0.4"
+widestring = "0.4"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 chrono = "0.4"
