fix(ci): updater artifacts

--- a/.github/workflows/artifacts-updater.yml
+++ b/.github/workflows/artifacts-updater.yml
@@ -118,4 +118,4 @@ jobs:
         if: matrix.platform == 'macos-latest'
         with:
           name: macos-updater-artifacts
-          path: ./target/release/bundle/macos/updater-example_*.app.tar.*
+          path: ./target/release/bundle/macos/updater-example.app.tar.*
