--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -67,7 +67,7 @@ jobs:
 
   create-recipe-with-yarn:
     name: "node@${{ matrix.node }} + yarn@1: ${{ matrix.recipe }}"
-    runs-on: ${{ github.event.inputs.branch || 'ubuntu' }}-latest
+    runs-on: ${{ github.event.inputs.platform || 'ubuntu' }}-latest
 
     strategy:
       fail-fast: false
@@ -77,8 +77,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref || github.event.inputs.branch }}
       - name: install stable
         uses: actions-rs/toolchain@v1
         with:
@@ -88,7 +86,7 @@ jobs:
           node-version: ${{ matrix.node }}
           yarn-version: 1.22.5
       - name: install webkit2gtk
-        if: (github.event.inputs.branch || 'ubuntu') == 'ubuntu'
+        if: (github.event.inputs.platform || 'ubuntu') == 'ubuntu'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libgtksourceview-3.0-dev webkit2gtk-4.0 libappindicator3-dev
