--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         node: ["14", "16"]
         manager: ["6", "7"]
-        recipe: ["vanillajs", "cra", "vite", "ngcli"]
+        recipe: ["vanillajs", "cra", "vite", "ngcli", "dominator"]
         exclude:
           - node: "16"
             manager: "6"
