--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         node: ["14", "16"]
         manager: ["6", "7"]
-        recipe: ["vanillajs", "cra", "vite", "ngcli"]
+        recipe: ["vanillajs", "cra", "vite", "ngcli", "svelte"]
         exclude:
           - node: "16"
             manager: "6"
@@ -73,7 +73,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ["14", "16"]
-        recipe: ["vanillajs", "cra", "vite", "ngcli"]
+        recipe: ["vanillajs", "cra", "vite", "ngcli", "svelte"]
 
     steps:
       - uses: actions/checkout@v2
