--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -36,6 +36,7 @@ serde = { version = "1.0", features = [ "derive" ] }
 tokio = { version = "1.7", features = [ "rt", "rt-multi-thread", "sync", "fs" ] }
 futures = "0.3"
 uuid = { version = "0.8", features = [ "v4" ] }
+url = { version = "2.2" }
 thiserror = "1.0"
 once_cell = "1.8"
 tauri-runtime = { version = "0.1.4", path = "../tauri-runtime" }
