--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -3,6 +3,9 @@
 # SPDX-License-Identifier: MIT
 
 name: test create-tauri-app
+env:
+  RUST_BACKTRACE: 1
+  TAURI_RECIPE: "vanillajs,cra,vite,vuecli,ngcli"
 
 on:
   workflow_dispatch:
@@ -13,12 +16,9 @@ on:
     paths:
       - "tooling/create-tauri-app/**"
 
-env:
-  RUST_BACKTRACE: 1
-
 jobs:
   create-recipe-with-npm:
-    name: "node@${{ matrix.node }} + npm@${{ matrix.manager }}: ${{ matrix.recipe }}"
+    name: "node@${{ matrix.node }} + npm@${{ matrix.manager }}"
     runs-on: ${{ github.event.inputs.platform || 'ubuntu' }}-latest
 
     strategy:
@@ -26,7 +26,6 @@ jobs:
       matrix:
         node: ["14", "16"]
         manager: ["6", "7"]
-        recipe: ["vanillajs", "cra", "vite", "ngcli", "svelte", "dominator"]
         exclude:
           - node: "16"
             manager: "6"
@@ -62,18 +61,16 @@ jobs:
       - run: yarn test
         working-directory: tooling/create-tauri-app
         env:
-          TAURI_RECIPE: ${{ matrix.recipe }}
           TAURI_RUN_MANAGER: "npm"
 
   create-recipe-with-yarn:
-    name: "node@${{ matrix.node }} + yarn@1: ${{ matrix.recipe }}"
+    name: "node@${{ matrix.node }} + yarn@1"
     runs-on: ${{ github.event.inputs.platform || 'ubuntu' }}-latest
 
     strategy:
       fail-fast: false
       matrix:
         node: ["14", "16"]
-        recipe: ["vanillajs", "cra", "vite", "ngcli", "svelte"]
 
     steps:
       - uses: actions/checkout@v2
@@ -97,5 +94,4 @@ jobs:
       - run: yarn test
         working-directory: tooling/create-tauri-app
         env:
-          TAURI_RECIPE: ${{ matrix.recipe }}
           TAURI_RUN_MANAGER: "yarn"
