Revert "Revert "WebDriver support (#1972)""
This reverts commit b4426eda9e64fcdd25a2d72e548b8b0fbfa09619.

--- a/.changes/config.json
+++ b/.changes/config.json
@@ -274,6 +274,11 @@
     "create-tauri-app": {
       "path": "./tooling/create-tauri-app",
       "manager": "javascript"
+    },
+    "tauri-driver": {
+      "path": "./tooling/webdriver",
+      "manager": "rust",
+      "postversion": "node ../../.scripts/sync-prerelease.js ${ pkg.pkg } ${ release.type }"
     }
   }
 }
