add `src-tauri` as a worksapce member

--- a/tooling/create-tauri-app/src/templates/dominator/_Cargo.toml
+++ b/tooling/create-tauri-app/src/templates/dominator/_Cargo.toml
@@ -11,6 +11,9 @@ lto = true
 crate-type = ["cdylib"]
 
 [workspace]
+members = [
+  "src-tauri"
+]
 
 [dependencies]
 console_error_panic_hook = "0.1.6"
