Adding in Dominator recipe (#1912)
* Adding in Dominator recipe

* Running prettifier

* add dominator to cta tests

* update postinit message

* add `src-tauri` as a worksapce member

Co-authored-by: amrbashir <48618675+amrbashir@users.noreply.github.com>

--- a/.github/workflows/test-cta.yml
+++ b/.github/workflows/test-cta.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         node: ["14", "16"]
         manager: ["6", "7"]
-        recipe: ["vanillajs", "cra", "vite", "ngcli", "svelte"]
+        recipe: ["vanillajs", "cra", "vite", "ngcli", "svelte", "dominator"]
         exclude:
           - node: "16"
             manager: "6"
