--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -66,7 +66,7 @@ attohttpc = { version = "0.17", features = [ "json", "form" ] }
 open = { version = "1.7", optional = true }
 shared_child = { version = "0.3", optional = true }
 os_pipe = { version = "0.9", optional = true }
-tauri-rfd = "0.1"
+rfd = "0.4.1"
 raw-window-handle = { version = "0.3.3", optional = true }
 minisign-verify = { version = "0.1", optional = true }
 os_info = { version = "3.0.6", optional = true}
